--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9090
+  port: 8080
 spring:
   application:
     name: news
@@ -11,6 +11,26 @@ spring:
   thymeleaf:
     cache: false
 
+  rabbitmq:
+    host: 110.43.48.124
+    port: 5672
+    username: admin
+    password: admin
+    virtual-host: news_host
+    listener:
+      simple:
+        concurrency: 10
+        max-concurrency: 10
+        prefetch: 500
+        auto-startup: true
+        default-requeue-rejected: true
+        retry:
+          enabled: true
+          initial-interval: 1000
+          max-attempts: 3
+          max-interval: 10000
+          multiplier: 1.0
+
 mybatis:
   type-aliases-package: com.sz.news.model.*
   mapper-locations: classpath:mappers/*Mapper.xml
@@ -18,3 +38,10 @@ mybatis:
 logging:
   level:
     com.sz.news.dao: debug
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+#        include: shutdown,health,info,env,beans,conditions
